# simple_web_server

./: Cargo.toml  README.md
src/: argparser.rs  logger.rs  main.rs  threads.rs
src/http/: httpmethod.rs  httprequest.rs  httpresponse.rs  httpstatuscode.rs  httpversion.rs  mod.rs
