[package]
name = "simple-http-server"
version = "0.1.0"
authors = ["stevesternberg"]
edition = "2021"

[dependencies]
http = "1.0.0"          # For HTTP request/response handling
lazy_static = "1.4.0"   # For ability to set a static variable at runtime
chrono = "0.4.19"       # For DateTime

[dependencies.uuid]     # For generating UUIDs
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
