[package]
name = "simple-http-server"
version = "0.1.0"
authors = ["stevesternberg"]
edition = "2021"

[dependencies]
lazy_static = "1.4.0"   # For ability to set a static variable at runtime

[dependencies.uuid]     # For generating UUIDs
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
